[CHG] Reports: eq_firstname und eq_title.name werden nun auch in den verkaufs- und versands-reports angedruckt

--- a/equitania/views/eq_report_sale_order.xml
+++ b/equitania/views/eq_report_sale_order.xml
@@ -160,7 +160,11 @@
 							<h t-field="o.company_id.city" />
 						</div>
 						<div t-if="o.partner_id.is_company">
-							<div t-field="o.partner_id.name" style="clear:left;" />
+							<div  style="clear:left;">
+								<h t-if="o.partner_id.title.name" t-field="o.partner_id.title.name"  />
+								<h t-if="o.partner_id.eq_firstname" t-field="o.partner_id.eq_firstname" />
+								<h t-field="o.partner_id.name" />
+							</div>
 							<div t-if="o.partner_id.eq_name2" t-field="o.partner_id.eq_name2"
 								style="clear:left;" />
 							<div t-if="o.partner_id.eq_name3" t-field="o.partner_id.eq_name3"
