--- a/equitania/views/eq_report_stockpicking.xml
+++ b/equitania/views/eq_report_stockpicking.xml
@@ -128,11 +128,16 @@
 							<!--<span><strong>Customer Address:</strong></span> -->
 						</div>
 						<div t-if="o.partner_id" name="partner_header" style="clear:left;">
-							<div t-if="o.partner_id.is_company == false">
+							<!--<div t-if="o.partner_id.is_company == false">
 								<span t-field="o.partner_id.title.name" />
 								<span t-field="o.partner_id.eq_firstname" style="clear:left;" />
+							</div>-->
+							<div  style="clear:left;">
+								<h t-if="o.partner_id.title.name" t-field="o.partner_id.title.name"  />
+								<h t-if="o.partner_id.eq_firstname" t-field="o.partner_id.eq_firstname" />
+								<h t-field="o.partner_id.name" />
 							</div>
-							<span t-field="o.partner_id.name" style="clear:left;" />
+							<!--<span t-field="o.partner_id.name" style="clear:left;" />-->
 							<div t-if="o.partner_id.eq_name2" t-field="o.partner_id.eq_name2" style="clear:left;" />
 							<div t-if="o.partner_id.eq_name3" t-field="o.partner_id.eq_name3" style="clear:left;" />
 							<div style="clear:left;" t-if="o.partner_id.parent_id.name"><span>c/o</span> <span t-field="o.partner_id.parent_id.name"/></div>
