--- a/equitania/views/eq_report_purchase_order.xml
+++ b/equitania/views/eq_report_purchase_order.xml
@@ -345,7 +345,7 @@
 			                    <tr style="vertical-align:top;">
 			                    	<td style="padding-right:0.5cm; font-weight:bold;">
 			                    		Deliver to:
-			                    	</td>
+			                    	</td> [Datum auswählen]
 			                    </tr>
 			                    <tr>
 			                    	<td>
@@ -379,10 +379,21 @@
     </div>
 </template>
 
+
+
+
 <template id="purchase.report_purchaseorder_document" active="True"><!-- account.report_invoice_document--><!-- #A -->
 	<t t-call="equitania.external_layout_purchase_order"><!-- Multicompanycontainer inkl separatem header  -->
 		<t t-call="equitania.report_purchaseorder_data" /><!-- Contentblock -->
 	</t>
+</template>
+
+<template id="report_purchaseorder">
+    <t t-call="report.html_container">
+        <t t-foreach="doc_ids" t-as="doc_id">
+            <t t-raw="translate_doc(doc_id, doc_model, 'partner_id.lang', 'purchase.report_purchaseorder_document')"/>
+        </t>
+    </t>
 </template>
 
 </data>
